--- a/portfolio/src/components/NavBar/navbar.css
+++ b/portfolio/src/components/NavBar/navbar.css
@@ -23,11 +23,10 @@
     cursor: cell;
 }
 
-.desktopMenuImg{
-    object-fit: cover;
-    height:1rem;
-    width:1rem;
-    margin: 1rem;
+.desktopMenuListItem:hover {
+    color:#9eca83;
+    padding-bottom: 0.5rem;
+    border-bottom: 4px solid;
 }
 
 .desktopMenuBtn{
@@ -38,5 +37,13 @@
     align-items: center;
     cursor: cell;
     padding: 0 1rem; /* adds space, 0 for top and 1rem for left and right */
-    border-radius: 1rem;
+    border-radius: 2rem;
+}
+
+.desktopMenuImg{
+    object-fit: cover;
+    height:1rem;
+    width:1rem;
+    margin: 1rem;
+    cursor: cell;
 }
