--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     background: transparent;
     cursor: crosshair;
+    font-family: 'poppins', sans-serif;
 }
 
 body{
