--- a/portfolio/src/components/NavBar/navbar.css
+++ b/portfolio/src/components/NavBar/navbar.css
@@ -24,7 +24,7 @@
 }
 
 .desktopMenuListItem:hover {
-    color:#9eca83;
+    color:#bada55;
     padding-bottom: 0.5rem;
     border-bottom: 4px solid;
 }
