--- a/portfolio/src/components/Works/works.css
+++ b/portfolio/src/components/Works/works.css
@@ -1,14 +1,39 @@
 #works{
-    overflow: hidden;
+    margin:0 auto;
+    min-height: calc(100vh - 4rem);
     width: 100vw;
-    max-width: 65rem;
+    max-width: 60rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin:0 auto;
+    padding: 0 1rem;
+    /* overflow: hidden; */
 }
+
+.worksTitle{
+    margin:1rem 0;
+    font-size:3rem;
+}
+
+.worksDescription{
+    font-weight: 300;
+    font-size:1rem;
+}
+
 .worksImgs{
     background: white;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    max-width: 65rem;
+}
+
+.worksImgs{
+    object-fit: cover;
+    /* height: 20rem; */
+    margin: 0.5rem;
+    
 }
