--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -14,3 +14,13 @@ body{
     overflow: hidden;
     overflow-y: scroll;
 }
+
+h1{
+    font-size:2rem;
+    font-weight: 400;
+}
+
+h2{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
