--- a/portfolio/src/components/Skills/skills.css
+++ b/portfolio/src/components/Skills/skills.css
@@ -1,13 +1,14 @@
 #skills{
     overflow: hidden;
     width: 100vw;
-    max-width: 65rem;
+    height: calc(100vh-5rem);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     margin:0 auto;
+    /* background-color: aliceblue; */
 }
 
 .skillTitle{
