--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background: rgb(30, 30, 30); 
+    background: #1e1e1e; 
     color: white;
     overflow: hidden;
     overflow-y: scroll;
