--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -16,11 +16,16 @@ body{
 }
 
 h1{
-    font-size:2rem;
-    font-weight: 400;
+    font-size:4rem;
+    font-weight: 800;
 }
 
 h2{
-    font-size: 1.5rem;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+h3{
+    font-size: 1.4rem;
+    font-weight: 400;
 }
