--- a/portfolio/src/components/Works/works.css
+++ b/portfolio/src/components/Works/works.css
@@ -1,40 +1,21 @@
 #works{
-    margin:0 auto;
     min-height: calc(100vh - 4rem);
     width: 100vw;
-    max-width: 60rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    padding: 0 1rem;
-    /* overflow: hidden; */
+    overflow: hidden;
+    margin: hidden ;
 }
 
-.worksTitle{
-    margin:1rem 0;
-    font-size:3rem;
+.works-header{
+    max-width: 70rem;
+    width: 100%;
+    align-items: left;
+    margin: 0;
 }
 
-.worksDescription{
-    font-weight: 300;
-    font-size:1rem;
-    max-width: 45rem;
-}
-
-.worksImgs{
-    background: white;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100vw;
-    max-width: 65rem;
-}
-
-.worksImgs{
-    object-fit: cover;
-    /* height: 20rem; */
-    margin: 0.5rem;
-    
+.works-header h1{
+    margin: .5rem 0;
 }
