--- a/portfolio/src/components/Skills/skills.css
+++ b/portfolio/src/components/Skills/skills.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin:0;
+    margin:3rem 0;
 }
 
 .skills-header{
