--- a/portfolio/src/components/Works/works.css
+++ b/portfolio/src/components/Works/works.css
@@ -1,16 +1,16 @@
 #works{
-    min-height: calc(100vh - 4rem);
+    height: calc(100vh - 5rem);
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
     overflow: hidden;
-    margin:0;
+    margin:3rem 0;
 }
 
 .works-header{
-    max-width: 70rem;
+    max-width: 59vw;
     width: 100%;
     align-items: left;
     margin: 0;
@@ -27,7 +27,7 @@
     align-items: center;
     padding: 1rem 3rem 1rem 1rem;
     width: 100%;
-    max-width: 70rem;
+    max-width: 59vw;
     border: 2px #c7c7c7 solid;
     border-radius: 5px;
 }
@@ -35,17 +35,17 @@
 .works-content-budgetr,
 .works-content-portfolio{
     width: 100%;
-    max-width: 70rem;
+    max-width: 59vw;
     height: 100%;
     border-radius: 5px;
     border: #c7c7c7 2px solid;
     padding: 1rem;
-    display: none;
+    display: flex;
 }
 
 .works-display{
     width: 40%;
-    object-fit: cover;
+    object-fit: contain;
     margin-left: 1rem;
 }
 
