--- a/portfolio/src/components/Works/works.css
+++ b/portfolio/src/components/Works/works.css
@@ -1,12 +1,12 @@
 #works{
-    height: calc(100vh - 5rem);
+    height: auto;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
     overflow: hidden;
-    margin:3rem 0;
+    margin:3rem 0 6rem 0;
 }
 
 .works-header{
@@ -20,41 +20,37 @@
     margin: .5rem 0;
 }
 
-.works-display-header-budgetr,
-.works-display-header-portfolio{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 3rem 1rem 1rem;
+.works-content-container{
     width: 100%;
     max-width: 59vw;
-    border: 2px #c7c7c7 solid;
-    border-radius: 5px;
-}
-
-.works-content-budgetr,
-.works-content-portfolio{
-    width: 100%;
-    max-width: 59vw;
-    height: 100%;
+    height: auto;
     border-radius: 5px;
     border: #c7c7c7 2px solid;
     padding: 1rem;
     display: flex;
+    margin: 0 0 1rem 0;
+}
+
+.works-content-budgetr{
+    margin-bottom: 2rem;
 }
 
 .works-display{
+    display: flex;
     width: 40%;
     object-fit: contain;
+    margin: 0;
+    padding: 0;
     margin-left: 1rem;
 }
 
-.works-content-container{
+.works-content{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
+
 .works-content-title{
     display: flex;
     width: 100%;
@@ -64,7 +60,7 @@
     align-items: center;
 }
 
-.works-content p{
+.works-content-container p{
     width: 100%;
     text-align:justify;
 }
@@ -87,7 +83,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    align-items:center;
+    align-items:end;
     justify-content: flex-end;
     margin:0;
     padding:0;
