--- a/portfolio/src/components/Skills/skills.css
+++ b/portfolio/src/components/Skills/skills.css
@@ -1,7 +1,7 @@
 #skills{
     overflow: hidden;
     width: 100vw;
-    height: calc(100vh-5rem);
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
