--- a/portfolio/src/components/outro/outro.css
+++ b/portfolio/src/components/outro/outro.css
@@ -148,3 +148,10 @@
         display: none;
     }
 }
+
+
+@media screen and (max-width: 768px){
+    #outro{
+        overflow-x: hidden;
+    }
+}
