--- a/portfolio/src/components/intro/intro.css
+++ b/portfolio/src/components/intro/intro.css
@@ -448,33 +448,37 @@
 @media screen and (max-width: 768px){
     #intro{
         overflow-x: hidden;
+        width: auto;
     }
+    
     .intro-photo{
         position:absolute;
-        top:12rem;
-        right: -12rem;
+        top:16rem;
+        right: 0;
         z-index: -1;
         object-fit: cover;
-        height:65%;
+        height:60%;
+        width: 90%;
+        overflow-x: hidden;  /* Prevent horizontal scrolling */
     }
     .intro-text-intro {
-        font-size: 2.6rem;
+        font-size: 2.8rem;
         font-weight: 800;
         margin:0;
         margin-bottom: -20px;
     }
     
     .intro-text-name{
-        font-size: 2.6rem;
+        font-size: 2.8rem;
         font-weight: 800;
         color:#2e5090;
         margin:0;
     }
     
     .intro-text-sub{
-        font-size: .9rem;
+        font-size: 1rem;
         font-weight: 200;
-        margin-top: 10px;
+        margin-top: -10px;
     }
 
     .intro-content{
@@ -482,8 +486,8 @@
     }
     
     .intro-content-body{
-        width:58%;
-        margin-top: -15rem;
+        width:70%;
+        margin-top: -22rem;
     }
 
     .intro-button{
@@ -491,8 +495,8 @@
         align-items: center;
         justify-content: center;
         font-size: .7rem;
-        margin: .5rem 0;
-        padding: 0.6rem 1.8rem;
+        margin: 0rem 0 .5rem 0;
+        padding: 0.5rem 1.4rem;
     }
 
     .intro-content-link{
@@ -503,7 +507,6 @@
         height: auto;
         justify-content: center;
         align-items: start;
-        /* background-color: pink; */
     }
 
     .intro-content-link-icon{
@@ -511,12 +514,11 @@
     }
 
     .intro-link-icons{
-        height: 1.9rem;
-        margin-right: 1rem;
+        height: 1.5rem;
+        margin-right: .5rem;
     }
 
     #intro-typing{
         font-size: 1rem;
-        font-weight: 00;
     }
 }
