--- a/portfolio/src/components/Skills/skills.css
+++ b/portfolio/src/components/Skills/skills.css
@@ -90,6 +90,10 @@
         margin: 1rem 0;
     }
 
+    .skills-logo{
+        margin: 1rem 0 1.5rem 0;
+    }
+
     .skills-logo-container-pink,
     .skills-logo-container-blue,
     .skills-logo-container-purple{
