--- a/portfolio/src/components/intro/intro.css
+++ b/portfolio/src/components/intro/intro.css
@@ -529,3 +529,34 @@
         font-size: 1rem;
     }
 }
+
+@media screen and (width: 375px) and (height: 667px){
+    .intro-content-body{
+        width:70%;
+        margin-top: -16rem;
+    }
+    .intro-text-intro {
+        font-size: 2.4rem;
+        font-weight: 800;
+        margin:0;
+        margin-bottom: -20px;
+    }
+    
+    .intro-text-name{
+        font-size: 2.4rem;
+        font-weight: 800;
+        color:#2e5090;
+        margin:0;
+    }
+    
+    .intro-text-sub{
+        font-size: .9rem;
+        font-weight: 200;
+        margin-top: -10px;
+    }
+
+    #intro-typing{
+        font-size: .9rem;
+    }
+
+}
